--- a/src/index.css
+++ b/src/index.css
@@ -1,37 +1,169 @@
-*{
+:root {
+  --white: #f6f6f6;
+  --main: rgb(29, 31, 29);
+  --main-2: rgb(63, 61, 61);
+  --black: rgb(35, 46, 41);
+  --hover: #ffddac;
+}
+
+* {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  scroll-behavior: smooth;
 }
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu",
+    "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New", monospace;
 }
 
-.App{
+.App {
   display: flex;
+  padding: 12vh 60px 20px 60px;
   justify-content: center;
   align-items: center;
 }
 
-.img{
+.app__container {
   display: flex;
   flex-direction: column;
-  width: 70%;
   gap: 20px;
+  padding: 0 20px;
+  justify-content: center;
 }
 
-img{
-  width: 200px;
-  height: 120px;
+img {
+  width: 100%;
+  height: 100%;
   object-fit: cover;
+  border-radius: 10px;
+}
+
+a {
+  text-decoration: none;
+  color: inherit;
+}
+ul {
+  list-style: none;
+}
+
+hr {
+  height: 5px;
+  background-color: var(--main);
+  border-radius: 10px;
+}
+
+.button {
+  background-color: var(--main);
+  padding: 12px;
+  color: var(--white);
+  border-radius: 4px;
+  cursor: pointer;
+  border: none;
+  font-size: 1.2rem;
+}
+
+.disButton {
+  background-color: var(--main-2);
+  padding: 12px;
+  color: var(--white);
+  border-radius: 4px;
+  cursor: not-allowed;
+  border: none;
+  font-size: 1.2rem;
+}
+
+.upload__file {
+  background-color: var(--main);
+  padding: 12px;
+  color: var(--white);
+  border-radius: 4px;
+  cursor: pointer;
+  border: none;
+  font-size: 1.2rem;
+}
+
+.image__gallery {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 20px;
+  justify-content: center;
+}
+
+.image__item {
+  width: 250px;
+  height: 250px;
+  border-radius: 10px;
+  overflow: hidden;
+  cursor: pointer;
+  box-shadow: rgba(0, 0, 0, 0.3) 0px 19px 38px, rgba(0, 0, 0, 0.22) 0px 15px 12px;
+  padding: 4px;
+  background-color: var(--black);
+  position: relative;
+}
+
+.image__btn {
+  display: flex;
+  position: absolute;
+  justify-content: center;
+  align-items: center;
+  bottom: 0;
+  gap: 10px;
+  padding: 10px;
+  border-radius: 10px;
+  cursor: pointer;
+}
+
+.download__btn,
+.copy__btn {
+  background-color: rgb(29, 31, 29,0.65);
+  
+  color: var(--white);
+  width: 40px;
+  height: 30px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  padding: 8px;
+  border-radius: 10px;
+  cursor: pointer;
+  border: none;
+  font-size: 0.7rem;
+  transition: all 0.3s ease-in-out;
+}
+
+.download__btn:hover,
+.copy__btn:hover,.download__btn:active, .copy__btn:active {
+  transform: scale(1.1);
+}
+
+.image__opt{
+  display: flex;
+  position: absolute;
+  justify-content: center;
+  align-items: center;
+  top: 0;
+  right: 0;
+  margin: 8px;
+  background-color: rgb(29, 31, 29,0.65);
+  color: var(--white);
+  width: 40px;
+  height: 30px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 8px;
+  border-radius: 10px;
+  cursor: pointer;
+  border: none;
+  font-size: 0.7rem;
+  transition: all 0.3s ease-in-out;
 }
